--- a/index.html
+++ b/index.html
@@ -5,37 +5,34 @@
   <title>Waitstaff Calculator</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
-  <script src="./myApp.js"></script>
+  <script src="myApp.js"></script>
 </head>
 <body ng-controller="mainCtrl">
   <header>
-    <h1>Waitstaff Calculator</h1>
+    <h1>Waistaff Calculator</h1>
   </header>
   <section id="meal-details">
-    <form>
+    <form ng-submit="submitForm()">
     <h2>Enter the Meal Details</h2>
-    <h3>Base Meal Price $ <input type="number" required></h3>
-    <h3>Tax Rate % <input type="number" required></h3>
-    <h3>Tip Percentage % <input type="number" required></h3>
-    <input type="submit" value="submit">
+    <h3>Base Meal Price $ <input type="number" ng-model='mealPrice'></h3>
+    <h3>Tax Rate % <input type="number" ng-model='taxRate' ></h3>
+    <h3>Tip Percentage % <input type="number" ng-model='tipPer'></h3>
 
+    <input type="submit" value="Submit">
 
-    <span ng-if></span>
-    <span></span>
-    <span></span>
     </form>
   </section>
-  <section id="customer-chargers">
+  <section id="customer-charges">
     <h2>Customer Charges</h2>
-    <h3>Subtotal: {{ something }}</h3>
-    <h3>Tip: {{ something }}</h3>
-    <h3>Total: {{ tip plus subtotal }}</h3>
+    <h3>Subtotal: {{ mealDetail.base }}</h3>
+    <h3>Tip: {{ calcTip }}</h3>
+    <h3>Total: {{ totalCharges }}</h3>
   </section>
   <section id="earnings-info">
     <h2>My Earings Info</h2>
-    <h3>Tip Total {{ tiptotal }}</h3>
-    <h3>Meal Count {{ goes up when sumbit is hit mealcount }}</h3>
-    <h3>Average Tip Per Meal: {{ tip total divided by meal count }}</h3>
+    <h3 ng-model="tipTotal">Tip Total {{ tipTotal }}</h3>
+    <h3 ng-model="mealCount">Meal Count {{ mealCount }}</h3>
+    <h3>Average Tip Per Meal:</h3>
   </section>
 
 </body>
