--- a/index.html
+++ b/index.html
@@ -12,27 +12,30 @@
     <h1>Waistaff Calculator</h1>
   </header>
   <section id="meal-details">
-    <form ng-submit="submitForm()">
+    <form ng-submit="submitForm();">
     <h2>Enter the Meal Details</h2>
-    <h3>Base Meal Price $ <input type="number" ng-model='mealPrice'></h3>
-    <h3>Tax Rate % <input type="number" ng-model='taxRate' ></h3>
-    <h3>Tip Percentage % <input type="number" ng-model='tipPer'></h3>
+    <h3>Base Meal Price $ <input type="number" step="0.01" ng-model='mealPrice' required></h3>
+    <h3>Tax Rate % <input type="number" ng-model='taxRate' required></h3>
+    <h3>Tip Percentage % <input type="number" ng-model='tipPer' required></h3>
 
-    <input type="submit" value="Submit">
+    <div>
+      <input type="submit" value="Submit">
+      <input type="reset" value="Cancel">
+    </div>
 
     </form>
   </section>
   <section id="customer-charges">
     <h2>Customer Charges</h2>
     <h3>Subtotal: {{ mealDetail.base }}</h3>
-    <h3>Tip: {{ tip }}</h3>
-    <h3>Total: {{ total }}</h3>
+    <h3>Tip: {{ tip.toFixed(2) }}</h3>
+    <h3>Total: {{ total.toFixed(2) }}</h3>
   </section>
   <section id="earnings-info">
     <h2>My Earings Info</h2>
-    <h3 ng-model="tipTotal">Tip Total: {{ tipTotal }}</h3>
+    <h3 ng-model="tipTotal">Tip Total: {{ tipTotal.tofixed(2) }}</h3>
     <h3 ng-model="mealCount">Meal Count: {{ mealCount }}</h3>
-    <h3 ng-model="avg">Average Tip Per Meal: {{ avg }}</h3>
+    <h3 ng-model="averageTip">Average Tip Per Meal: {{ (tipTotal/mealCount).toFixed(2) }}</h3>
   </section>
 
 </body>
