--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
   <!-- styles -->
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+
+</head>
+<body class="container">
+  <header>
+    <h1>Waistaff Calculator</h1>
+    <nav>
+      <a href="#/">Home</a>
+      <a href="#/newmeal">New Meal</a>
+      <a href="#/myearnings">My Earnings</a>
+    </nav>
+  </header>
+
+  <div ng-view></div>
+
   <!-- vendors -->
   <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
   <script src="node_modules/angular-route/angular-route.min.js"></script>
   <!-- my scripts -->
   <script src="myApp.js"></script>
-</head>
-<body ng-controller="mainCtrl" class="container">
-  <header>
-    <h1>Waistaff Calculator</h1>
-    <nav>
-      <a href="">Home</a>
-      <a href="">New Meal</a>
-      <a href="">My Earnings</a>
-    </nav>
-  </header>
-
 
 
 </body>
