--- a/newmeal.html
+++ b/newmeal.html
@@ -16,7 +16,7 @@
 <section class="col-sm-12" id="cust-earn">
 <div id="customer-charges">
   <h2>Customer Charges</h2>
-  <h3>Subtotal: $ {{ mealDetail.base }}</h3>
+  <h3>Subtotal: $ {{ taxPlusBase }}</h3>
   <h3>Tip: $ {{ tip.toFixed(2) }}</h3>
   <h3>Total: $ {{ total.toFixed(2) }}</h3>
 </div>
