--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 
 </head>
-<body class="container">
+<body ng-controller="mainCtrl as main" class="container">
   <header>
     <h1>Waistaff Calculator</h1>
     <nav>
