--- a/index.html
+++ b/index.html
@@ -9,20 +9,13 @@
 
 </head>
 <body ng-controller="mainCtrl as main" class="container">
-  <header>
-    <h1>Waistaff Calculator</h1>
-    <nav>
-      <a href="#/">Home</a>
-      <a href="#/newmeal">New Meal</a>
-      <a href="#/myearnings">My Earnings</a>
-    </nav>
-  </header>
 
-  <div ng-view></div>
+
+  <div ui-view></div>
 
   <!-- vendors -->
   <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
-  <script src="node_modules/angular-route/angular-route.min.js"></script>
+  <script src="node_modules/angular-ui-router/build/angular-ui-router.min.js"></script>
   <!-- my scripts -->
   <script src="myApp.js"></script>
 
