--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body ng-controller="mainCtrl as main" class="container">
 
 
-  <div ui-view></div>
+  <div ui-view class="ui-view-container"></div>
 
   <!-- vendors -->
   <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
   <script src="node_modules/angular-ui-router/build/angular-ui-router.min.js"></script>
+  <script src="node_modules/angular-animate/angular-animate.min.js"></script>
   <!-- my scripts -->
   <script src="myApp.js"></script>
 
